--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         const options = [
             {
                 year: 2026,
+                target: "jym",
                 txt: "Wide",
                 imgname: "card_2026.jpg",
                 styles: {
@@ -23,6 +24,7 @@
                 }
             }, {
                 year: 2026,
+                target: "jym",
                 txt: "Tall",
                 imgname: "card_2026_tall.jpg",
                 styles: {
@@ -31,7 +33,28 @@
                     },
                 }
             }, {
+                year: 2026,
+                target: "origin",
+                txt: "Wide",
+                imgname: "card_2026_origin.jpg",
+                styles: {
+                    content: {
+                        x: 450, y: 950, width: 3030, height: 1250,
+                    },
+                }
+            }, {
+                year: 2026,
+                target: "origin",
+                txt: "Tall",
+                imgname: "card_2026_origin_tall.jpg",
+                styles: {
+                    content: { 
+                        x: 620, y: 1350, width: 1180, height: 1900,
+                    },
+                }
+            }, {
                 year: 2024,
+                target: "jym",
                 txt: "Wide",
                 imgname: "card_2024.jpg",
                 styles: {
@@ -41,6 +64,7 @@
                 }
             }, {
                 year: 2024,
+                target: "jym",
                 txt: "Tall",
                 imgname: "card_2024_tall.jpg",
                 styles: {
